Fix nav__menu height overlap in mobile device

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -312,7 +312,7 @@ body.dark-theme{
 @media screen and (max-width: 1150px) {
     .nav__menu{
         position: fixed;
-        top: -100%;
+        top: -200%;
         left: 0;
         background-color: rgba(0, 0, 0, 0.75);
         width: 100%;
